# EECE5554

./: .git_ignore  .gitignore  README.md
LAB0/src/simple_chatter/: package.xml  setup.cfg  setup.py
LAB0/src/simple_chatter/simple_chatter/: my_listener.py  (+1 more)
LAB1/lab1_ws/: analysis.ipynb  rosbag_to_csv.py
LAB1/lab1_ws/install/: local_setup.sh  setup.sh
LAB1/lab1_ws/log/: latest_build
LAB1/lab1_ws/src/: analysis.ipynb
LAB1/src/: analysis.ipynb  humble_data_analysis.ipynb  rosbag_to_csv.py
LAB1/src/data/: occluded_data_0_gps.csv  open_data_0_gps.csv  straight_line_data_1_gps.csv
LAB1/src/gps_driver/: CMakeLists.txt  package.xml  setup.py
LAB1/src/gps_driver/launch/: gps_launch.py  launch.py
LAB1/src/gps_driver/msg/: GpsMsg.msg
LAB1_new/src/gps_driver/: setup.py
LAB1_new/src/gps_driver_msgs/: CMakeLists.txt  package.xml
LAB1_new/src/gps_driver_msgs/msg/: gps_msg.msg
LAB3/src/: record_bag.sh
LAB3/src/analysis/: analysis.ipynb
LAB3/src/imu_driver/: package.xml  setup.py
LAB3/src/imu_msg/: CMakeLists.txt  package.xml
LAB4/src/analysis/: analysis.ipynb
gnss/: analysis.ipynb
gnss/data/car_ride/: stationary_run22_0.db3
gnss/data/humble_occluded_run/: gps_run1_0.db3  metadata.yaml
gnss/data/humble_open_run/: metadata.yaml
gnss/data/occludedRTK/: metadata.yaml  occludedRTK_0.db3
gnss/data/openRTK/: metadata.yaml  openRTK_0.db3
gnss/data/walkingRTK/: metadata.yaml  walkingRTK_0.db3
gnss/src/gps_driver_msgs/: CMakeLists.txt
gnss/src/rtk_driver/: package.xml  setup.py
gnss/src/rtk_driver_msgs/: CMakeLists.txt  package.xml
(+80 files in other folders)
